@@ -48,6 +48,7 @@ my $Dir;                                 # Directory in which coverage will be
 my $DB      = "cover_db";                # DB name.
 my $Merge   = 1;                         # Merge databases.
 my $Summary = 1;                         # Output coverage summary.
+my $Subs_Only = 0;                       # Coverage only for sub bodies.
 
 my @Ignore;                              # Packages to ignore.
 my @Inc;                                 # Original @INC to ignore.
@@ -259,12 +260,13 @@ sub import
     while (@o)
     {
         local $_ = shift @o;
-        /^-silent/    && do { $Silent  = shift @o; next };
-        /^-dir/       && do { $Dir     = shift @o; next };
-        /^-db/        && do { $DB      = shift @o; next };
-        /^-merge/     && do { $Merge   = shift @o; next };
-        /^-summary/   && do { $Summary = shift @o; next };
-        /^-blib/      && do { $blib    = shift @o; next };
+        /^-silent/    && do { $Silent    = shift @o; next };
+        /^-dir/       && do { $Dir       = shift @o; next };
+        /^-db/        && do { $DB        = shift @o; next };
+        /^-merge/     && do { $Merge     = shift @o; next };
+        /^-summary/   && do { $Summary   = shift @o; next };
+        /^-blib/      && do { $blib      = shift @o; next };
+        /^-subs_only/ && do { $Subs_Only = shift @o; next };
         /^-coverage/  &&
             do { $Coverage{+shift @o} = 1 while @o && $o[0] !~ /^[-+]/; next };
         /^[-+]ignore/ &&
@@ -605,13 +607,16 @@ sub report
     check_files();
 
     get_cover(main_cv, main_root);
-    get_cover($_) for B::begin_av()->isa("B::AV") ? B::begin_av()->ARRAY : ();
-    if (exists &B::check_av)
-    {
+    unless ($Subs_Only) {
         get_cover($_)
-            for B::check_av()->isa("B::AV") ? B::check_av()->ARRAY : ();
+	for B::begin_av()->isa("B::AV") ? B::begin_av()->ARRAY : ();
+	if (exists &B::check_av)
+	{
+	    get_cover($_)
+	    for B::check_av()->isa("B::AV") ? B::check_av()->ARRAY : ();
+	}
+	get_cover($_) for get_ends()->isa("B::AV") ? get_ends()->ARRAY : ();
     }
-    get_cover($_) for get_ends()->isa("B::AV") ? get_ends()->ARRAY : ();
     get_cover($_) for @Cvs;
 
     my %files;
@@ -1234,6 +1239,7 @@ if the tests fail and you would like nice output telling you why.
  -select RE          - Set REs of files to select (default none).
  +select RE          - Append to REs of files to select.
  -silent val         - Don't print informational messages (default off)
+ -subs_only val      - Only cover code in subroutine bodies (default off)
  -summary val        - Print summary information iff val is true (default on).
 
 =head2 More on Coverage Options
